Fixed spacing with mdl-card__supporting-text in anouncements

--- a/SoDA/static/css/styles.css
+++ b/SoDA/static/css/styles.css
@@ -38,8 +38,18 @@ html, body {
 .soda .mdl-card > * {
   height: auto;
 }
-.soda .mdl-card .mdl-card__supporting-text {
-  margin: 16px;
+.soda .static-card .mdl-card__supporting-text {
+  margin: 18px;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 0;
+  color: inherit;
+  width: calc(100% - 80px);
+}
+
+.soda .content-card .mdl-card__supporting-text {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
@@ -63,7 +73,7 @@ html, body {
   background-color: transparent;
 }
 .soda .mdl-card__supporting-text + .mdl-card__actions {
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid rgba(0, 0, 0, 0.12)
 }
 
 .soda .mdl-layout__content section:not(:last-of-type) {
@@ -166,6 +176,7 @@ html, body {
 }
 .soda .hideMe {
   display: none;
+  margin: 0px;
 }
 .soda .showMe {
   max-height: 100%;
@@ -176,6 +187,7 @@ html, body {
 
 .soda .dontShow {
   display: none;
+  margin: 0px;
 }
 .soda .hidewrapper {
   position: relative;
